# ces-messenger

./: .flake8  .gitignore  .prettierrc.js  LINTING.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml  vite.config.js
doc/: authentication.md  dom_hints.md  message_templates.md  options.md
doc/examples/: callback_hook_discard_message.html  client_function_tool.html  end_session_on_close.html  message_template_override.html  message_template_precompiled.html  message_template_raw.html  panel_close_options.html  session_timeout.html
script/: build-gstatic.sh  deploy-demo.sh  deploy-staging.sh  precompile-templates.js
src/: BidiWidget.ce.vue  Debugger.vue  agent-config.js  auth.js  authentication.js  custom-elements.js  defaults.js  dom-hints.js  function-tools.js  logger.js  main.js  upload-helper.js  util.js
src/audio/: audio-helper.js  audio-recorder.js  audio-recording-worklet.js  audio-streamer.js  audioworklet-registry.js
src/bidi/: bidi-adaptors.js  bidi-webstream.js  config-templates.json
src/templates/: cesm_button.hbs  cesm_button.json  cesm_mcq.hbs  cesm_mcq.json  index.js  precompiled.js
tests/: test_plan.md
tests/test_pages/: ADV-DOM-001_createDomHintTracker.html  ADV-TPL-001_render_builtin_template.html  ADV-TPL-002_register_and_render_custom_template.html  ADV-TPL-003_rich_message_interaction.html  ADV-TPL-004_registerRichMessageHandler.html  API-EVENT-001_event_emission.html  API-FUNC-001_sessionInput_text.html  API-FUNC-002_sessionInput_images.html  API-FUNC-003_setQueryParameters.html  (+34 more)
(+23 files in other folders)
