[project]
name = "ces-messenger"
version = "0.1.0"
description = "Web widget for Conversational agents."
# Add other metadata like authors, license, etc. as needed

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
]

# --- Keep your existing tool configurations below ---
[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203", # Whitespace before ':', conflicts with black
]